Melhorando o sistema de mensagens

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,9 @@
 <div class="container--paglogin">
+   {{#if message}}
+  <div id="card" class="container_message">
+  {{message}}
+  </div>
+  {{/if}}
   <div class="container-logo">
         <h1 class="logo">
           <a href="/login">Web <span>Estoque</span></a>
